fixed extra padding

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -13,7 +13,7 @@
     }
     
     .info {
-        padding: 2.5em;
+        padding: 1rem;
     }
     header {
     display: grid;
